cluster/charts/archive/testing/solar-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: solar-ing
  namespace: 'solar-system'
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: workload-nginx
  rules:
    - http:
        paths:
          - path: /solar(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: solar-system
                port:
                  number: 80
